tests/NormalTests/paczka2/big_fuzzy/39425935.err
Error in line 11: A866 S281 79,6
Error in line 20: A866 A781 86,8
Error in line 17: BZH A866 62,7
Error in line 50: CQy2 S2=1 23,=
Error in line 56: CQy2 S39t 23,2
Error in line 59: CQy2 S391 34,1
Error in line 42: BZH S391 422,4
Error in line 75: BZH AM81 404,6
Error in line 64: A866 A781 14,2
Error in line 77: A866 S391 4,2
Error in line 72: bwmTvlmlVF A866 60,1
Error in line 76: 3vIy A866 56,6
Error in line 79: bwmTvlmlVF S281 74,9
Error in line 88: bwmTvlmlVF S281 49,m
Error in line 90: Q6uZ SU91 5U,0
Error in line 80: 3vIy S391 81,1
Error in line 71: BZH A781 87,0
Error in line 94: BZH A866 25,0
Error in line 93: Q6uZ S391 254,4
Error in line 73: YXGbg4B A866 77,0
Error in line 107: BZH A781 95,1
Error in line 89: bwmTvlmlVF S281 56,0
Error in line 102: CQy2 S281 15,4
Error in line 106: 3vIy S281 46,8
Error in line 117: Q6uZ A866 88,0
Error in line 132: Q6uZ S281 337,0
Error in line 133: Q6uZ A866 34,9
Error in line 143: A866 A866 62,3
Error in line 155: Q6uZ S391 38,8
Error in line 159: BZH S281 92,1
Error in line 160: CQy2 A781 80,8
Error in line 161: bwmTvlmlVF S281 26,6
Error in line 168: A866 A781 55,2
Error in line 166: YXGbg4B S391 40,2
Error in line 204: YXGbg4B S391 0,3
Error in line 189: A866 A866 58,8
Error in line 212: CQy2 S391 74,8
Error in line 216: CQy2 A781 57,2
Error in line 221: bwmTvlmlVF A866 96,2
Error in line 228: YXGbg4B A781 23,8
Error in line 231: bwmTvlmlVF S281 86,1
Error in line 241: BZH S281 54,0
Error in line 223: A866 A781 2,7
Error in line 244: BZH S391 59,3
